# chalk

./: .gitignore  .gitmodules  CMakeLists.txt
src/apps/: calculator.cpp  exponential_product.cpp  factor.cpp  langevin_scheme.cpp  langevin_scheme_1d.cpp  langevin_scheme_commutative.cpp  langevin_scheme_order2.cpp  langevin_scheme_order3.cpp  primes.cpp  psp.cpp  sprp.cpp  wieferich.cpp  ziggurat.cpp
src/chalk/: bch.h  covariant.cpp  covariant.h  ddouble.h  dynamic_polynomial.h  floating.h  fraction.h  free_group.h  group_ring.h  ideal.h  indexed.cpp  indexed.h  integer.h  modular.h  monomial.h  number.h  numerics.cpp  numerics.h  numtheory.cpp  numtheory.h  parser.cpp  parser.h  polynomial.h  quadratic.h  rings.h  series.h  sparse_polynomial.h  symbolic.cpp  symbolic.h
src/tests/: CMakeLists.txt  test_algebra.cpp  test_bch.cpp  test_covariant.cpp  test_ddouble.cpp  test_integer.cpp  test_langevin_scheme.cpp  test_mpfr_eigen.cpp  test_numerics.cpp  test_primes.cpp  test_rings.cpp
tests/: bch.cpp  ddouble.cpp  integer.cpp  langevin_scheme.cpp  mpfr_eigen.cpp  numerics.cpp  rings.cpp
